force-app/main/default/objects/QC_Wastage__c/QC_Wastage__c.object-meta.xml
<CustomObject>
    <label>QC Wastage</label>
    <nameField>
        <label>QC Wastage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Wastage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>