force-app/main/default/objects/QC_Wastage__c/fields/Avoidable__c.field-meta.xml
<CustomField>
    <fullName>Avoidable__c</fullName>
    <label>Avoidable?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>