force-app/main/default/objects/QC_Wastage__c/fields/Catcher__c.field-meta.xml
<CustomField>
    <fullName>Catcher__c</fullName>
    <label>Catcher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alexis</fullName>
            </value>
            <value>
                <fullName>Carl</fullName>
            </value>
            <value>
                <fullName>Eli</fullName>
            </value>
            <value>
                <fullName>Freddy</fullName>
            </value>
            <value>
                <fullName>Heather</fullName>
            </value>
            <value>
                <fullName>Jess</fullName>
            </value>
            <value>
                <fullName>Logan</fullName>
            </value>
            <value>
                <fullName>Matthew</fullName>
            </value>
            <value>
                <fullName>Miguel</fullName>
            </value>
            <value>
                <fullName>Oshay</fullName>
            </value>
            <value>
                <fullName>Ray</fullName>
            </value>
            <value>
                <fullName>Renea</fullName>
            </value>
            <value>
                <fullName>Rubi</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Ashley</fullName>
                <isActive>false</isActive>
                <label>Ashley</label>
            </value>
            <value>
                <fullName>Dom</fullName>
                <isActive>false</isActive>
                <label>Dom</label>
            </value>
            <value>
                <fullName>Drake</fullName>
                <isActive>false</isActive>
                <label>Drake</label>
            </value>
            <value>
                <fullName>Evony</fullName>
                <isActive>false</isActive>
                <label>Evony</label>
            </value>
            <value>
                <fullName>Jade</fullName>
                <isActive>false</isActive>
                <label>Jade</label>
            </value>
            <value>
                <fullName>Jaiden</fullName>
                <isActive>false</isActive>
                <label>Jaiden</label>
            </value>
            <value>
                <fullName>Jairo</fullName>
                <isActive>false</isActive>
                <label>Jairo</label>
            </value>
            <value>
                <fullName>Jeli</fullName>
                <isActive>false</isActive>
                <label>Jeli</label>
            </value>
            <value>
                <fullName>Kenzie</fullName>
                <isActive>false</isActive>
                <label>Kenzie</label>
            </value>
            <value>
                <fullName>Makenzie</fullName>
                <isActive>false</isActive>
                <label>Makenzie</label>
            </value>
            <value>
                <fullName>Naiki</fullName>
                <isActive>false</isActive>
                <label>Naiki</label>
            </value>
            <value>
                <fullName>Sun</fullName>
                <isActive>false</isActive>
                <label>Sun</label>
            </value>
            <value>
                <fullName>Will</fullName>
                <isActive>false</isActive>
                <label>Will</label>
            </value>
            <value>
                <fullName>angel</fullName>
                <isActive>false</isActive>
                <label>angel</label>
            </value>
            <value>
                <fullName>chase</fullName>
                <isActive>false</isActive>
                <label>chase</label>
            </value>
            <value>
                <fullName>kenny</fullName>
                <isActive>false</isActive>
                <label>kenny</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>