force-app/main/default/objects/QC_Wastage__c/fields/Coolyz_Colors__c.field-meta.xml
<CustomField>
    <fullName>Coolyz_Colors__c</fullName>
    <label>Coolyz Colors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black and white</fullName>
            </value>
            <value>
                <fullName>Blue and white</fullName>
            </value>
            <value>
                <fullName>Camo</fullName>
            </value>
            <value>
                <fullName>Forest</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Tie Dye</fullName>
            </value>
            <value>
                <fullName>Tropical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>