force-app/main/default/objects/QC_Wastage__c/fields/Do_Not_Pull_From_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Pull_From_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For burn rack filing</description>
    <inlineHelpText>Check to not include in inventory</inlineHelpText>
    <label>Do Not Pull From Inventory</label>
    <type>Checkbox</type>
</CustomField>