force-app/main/default/objects/QC_Wastage__c/fields/Est_Wastage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Est_Wastage_Cost__c</fullName>
    <formula>IF(CONTAINS(TEXT(Inventory_SKU__c), &quot;202&quot;), 2.64 * of_shirts__c,
    IF(CONTAINS(TEXT(Inventory_SKU__c), &quot;235&quot;), 1.95 * of_shirts__c,
        IF(CONTAINS(TEXT(Inventory_SKU__c), &quot;340&quot;), 7.52 * of_shirts__c,
            IF(CONTAINS(TEXT(Inventory_SKU__c), &quot;320&quot;), 10.74 * of_shirts__c,
                IF(CONTAINS(TEXT(Inventory_SKU__c), &quot;291&quot;), 4.39 * of_shirts__c,
                    IF(CONTAINS(TEXT(Inventory_SKU__c), &quot;5001&quot;), 6.75 * of_shirts__c,
                        IF(CONTAINS(TEXT(Inventory_SKU__c), &quot;9001&quot;), 8.50 * of_shirts__c,
                            0
                        )
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Wastage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>