force-app/main/default/objects/QC_Wastage__c/fields/Front_Door__c.field-meta.xml
<CustomField>
    <fullName>Front_Door__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Front Door?</label>
    <type>Checkbox</type>
</CustomField>