force-app/main/default/objects/QC_Wastage__c/fields/Front_door_brand__c.field-meta.xml
<CustomField>
    <fullName>Front_door_brand__c</fullName>
    <label>Front door brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>