force-app/main/default/objects/QC_Wastage__c/fields/Front_door_product_type__c.field-meta.xml
<CustomField>
    <fullName>Front_door_product_type__c</fullName>
    <label>Front door product type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shirt/Hoodie</fullName>
            </value>
            <value>
                <fullName>Hats</fullName>
            </value>
            <value>
                <fullName>Coolyz</fullName>
            </value>
            <value>
                <fullName>Masks</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>