force-app/main/default/objects/QC_Wastage__c/fields/Front_door_sizes__c.field-meta.xml
<CustomField>
    <fullName>Front_door_sizes__c</fullName>
    <label>Front door sizes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>2XL</fullName>
            </value>
            <value>
                <fullName>3XL</fullName>
            </value>
            <value>
                <fullName>4XL</fullName>
            </value>
            <value>
                <fullName>5XL</fullName>
            </value>
            <value>
                <fullName>YXS</fullName>
            </value>
            <value>
                <fullName>YS</fullName>
            </value>
            <value>
                <fullName>YM</fullName>
            </value>
            <value>
                <fullName>YL</fullName>
            </value>
            <value>
                <fullName>YXL</fullName>
            </value>
            <value>
                <fullName>2T</fullName>
            </value>
            <value>
                <fullName>3T</fullName>
            </value>
            <value>
                <fullName>4T</fullName>
            </value>
            <value>
                <fullName>5T</fullName>
            </value>
            <value>
                <fullName>6T</fullName>
            </value>
            <value>
                <fullName>6M</fullName>
            </value>
            <value>
                <fullName>12M</fullName>
            </value>
            <value>
                <fullName>18M</fullName>
            </value>
            <value>
                <fullName>24M</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>