force-app/main/default/objects/QC_Wastage__c/fields/Good_Type__c.field-meta.xml
<CustomField>
    <fullName>Good_Type__c</fullName>
    <label>Good Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Front Door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>