force-app/main/default/objects/QC_Wastage__c/fields/Inventory_adult_sizes__c.field-meta.xml
<CustomField>
    <fullName>Inventory_adult_sizes__c</fullName>
    <label>Inventory adult sizes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>2XL</fullName>
            </value>
            <value>
                <fullName>3XL</fullName>
            </value>
            <value>
                <fullName>4XL</fullName>
            </value>
            <value>
                <fullName>5XL</fullName>
            </value>
            <value>
                <fullName>6XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>