force-app/main/default/objects/QC_Wastage__c/fields/Inventory_colors__c.field-meta.xml
<CustomField>
    <fullName>Inventory_colors__c</fullName>
    <label>Inventory colors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Denim</fullName>
            </value>
            <value>
                <fullName>Charcoal</fullName>
            </value>
            <value>
                <fullName>Burgundy</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Royal</fullName>
            </value>
            <value>
                <fullName>Graphite</fullName>
            </value>
            <value>
                <fullName>Honey</fullName>
            </value>
            <value>
                <fullName>Sky</fullName>
            </value>
            <value>
                <fullName>Mint</fullName>
            </value>
            <value>
                <fullName>Grape</fullName>
            </value>
            <value>
                <fullName>Melon</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Kelly</fullName>
            </value>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>Rust</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Pumpkin</fullName>
            </value>
            <value>
                <fullName>Ash grey</fullName>
            </value>
            <value>
                <fullName>Heather grey/black</fullName>
            </value>
            <value>
                <fullName>Black/grey</fullName>
            </value>
            <value>
                <fullName>Sand</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Black/White</fullName>
            </value>
            <value>
                <fullName>Black/Htr</fullName>
            </value>
            <value>
                <fullName>DK Heather Grey</fullName>
            </value>
            <value>
                <fullName>Tan</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>