force-app/main/default/objects/QC_Wastage__c/fields/Inventory_SKU__c.field-meta.xml
<CustomField>
    <fullName>Inventory_SKU__c</fullName>
    <label>Inventory SKU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>202</fullName>
            </value>
            <value>
                <fullName>235</fullName>
            </value>
            <value>
                <fullName>291</fullName>
            </value>
            <value>
                <fullName>320</fullName>
            </value>
            <value>
                <fullName>340</fullName>
            </value>
            <value>
                <fullName>Coolyz</fullName>
            </value>
            <value>
                <fullName>FM19</fullName>
            </value>
            <value>
                <fullName>FM21</fullName>
            </value>
            <value>
                <fullName>450</fullName>
            </value>
            <value>
                <fullName>1182</fullName>
            </value>
            <value>
                <fullName>BP78</fullName>
            </value>
            <value>
                <fullName>C112</fullName>
            </value>
            <value>
                <fullName>SP12 Black/Char</fullName>
            </value>
            <value>
                <fullName>LP101 black</fullName>
            </value>
            <value>
                <fullName>6006</fullName>
            </value>
            <value>
                <fullName>5001</fullName>
            </value>
            <value>
                <fullName>9001</fullName>
            </value>
            <value>
                <fullName>Note Jotter Max</fullName>
            </value>
            <value>
                <fullName>6606 black</fullName>
            </value>
            <value>
                <fullName>1001</fullName>
            </value>
            <value>
                <fullName>6606</fullName>
            </value>
            <value>
                <fullName>c115</fullName>
            </value>
            <value>
                <fullName>AD969</fullName>
            </value>
            <value>
                <fullName>Tiny Tee</fullName>
            </value>
            <value>
                <fullName>8502 Canvas tote bag</fullName>
            </value>
            <value>
                <fullName>602</fullName>
            </value>
            <value>
                <fullName>39-165</fullName>
            </value>
            <value>
                <fullName>6506</fullName>
            </value>
            <value>
                <fullName>SF500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>