force-app/main/default/objects/QC_Wastage__c/fields/Inventory_SKU_Text__c.field-meta.xml
<CustomField>
    <fullName>Inventory_SKU_Text__c</fullName>
    <label>Inventory SKU Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>