force-app/main/default/objects/QC_Wastage__c/fields/Inventory_youth_sizes__c.field-meta.xml
<CustomField>
    <fullName>Inventory_youth_sizes__c</fullName>
    <label>Inventory youth sizes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YXS</fullName>
            </value>
            <value>
                <fullName>YS</fullName>
            </value>
            <value>
                <fullName>YM</fullName>
            </value>
            <value>
                <fullName>YL</fullName>
            </value>
            <value>
                <fullName>YXL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>