force-app/main/default/objects/QC_Wastage__c/fields/Issue_Group__c.field-meta.xml
<CustomField>
    <fullName>Issue_Group__c</fullName>
    <label>Issue Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crooked/Off Centered</fullName>
            </value>
            <value>
                <fullName>DTF Machine</fullName>
            </value>
            <value>
                <fullName>DTF Press</fullName>
            </value>
            <value>
                <fullName>ink issue</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>No Tag</fullName>
            </value>
            <value>
                <fullName>Not Clearing</fullName>
            </value>
            <value>
                <fullName>Not Enough Pressure</fullName>
            </value>
            <value>
                <fullName>Overstaged</fullName>
            </value>
            <value>
                <fullName>Pigment</fullName>
            </value>
            <value>
                <fullName>Pinhole</fullName>
            </value>
            <value>
                <fullName>Pre-Press</fullName>
            </value>
            <value>
                <fullName>Press Manual error</fullName>
            </value>
            <value>
                <fullName>QC Rack</fullName>
            </value>
            <value>
                <fullName>Receiving QC</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
            <value>
                <fullName>screens issue</fullName>
            </value>
            <value>
                <fullName>Test Shirts</fullName>
            </value>
            <value>
                <fullName>Too Much Pressure</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
            <value>
                <fullName>Understaged</fullName>
            </value>
            <value>
                <fullName>Wrong Tag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>