force-app/main/default/objects/QC_Wastage__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job #</label>
    <length>155</length>
    <type>Text</type>
</CustomField>