force-app/main/default/objects/QC_Wastage__c/fields/Job_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Job_Approved_By__c</fullName>
    <label>Job Approved By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carl</fullName>
            </value>
            <value>
                <fullName>Heather</fullName>
            </value>
            <value>
                <fullName>Isaiah</fullName>
            </value>
            <value>
                <fullName>Jess</fullName>
            </value>
            <value>
                <fullName>Julio</fullName>
            </value>
            <value>
                <fullName>Miguel</fullName>
            </value>
            <value>
                <fullName>Oshay</fullName>
            </value>
            <value>
                <fullName>Renea</fullName>
            </value>
            <value>
                <fullName>Taylor</fullName>
            </value>
            <value>
                <fullName>Zach</fullName>
            </value>
            <value>
                <fullName>Angel</fullName>
                <isActive>false</isActive>
                <label>Angel</label>
            </value>
            <value>
                <fullName>Diego</fullName>
                <isActive>false</isActive>
                <label>Diego</label>
            </value>
            <value>
                <fullName>Jairo</fullName>
                <isActive>false</isActive>
                <label>Jairo</label>
            </value>
            <value>
                <fullName>Jason</fullName>
                <isActive>false</isActive>
                <label>Jason</label>
            </value>
            <value>
                <fullName>Kenny</fullName>
                <isActive>false</isActive>
                <label>Kenny</label>
            </value>
            <value>
                <fullName>Mike</fullName>
                <isActive>false</isActive>
                <label>Mike</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>