force-app/main/default/objects/QC_Wastage__c/fields/Loader__c.field-meta.xml
<CustomField>
    <fullName>Loader__c</fullName>
    <label>Loader</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ashden</fullName>
            </value>
            <value>
                <fullName>Dom</fullName>
            </value>
            <value>
                <fullName>Drake</fullName>
            </value>
            <value>
                <fullName>Eric</fullName>
            </value>
            <value>
                <fullName>Isaiah</fullName>
            </value>
            <value>
                <fullName>Jade</fullName>
            </value>
            <value>
                <fullName>Jairo</fullName>
            </value>
            <value>
                <fullName>Jantzen</fullName>
            </value>
            <value>
                <fullName>Jeannette</fullName>
            </value>
            <value>
                <fullName>Kenny</fullName>
            </value>
            <value>
                <fullName>Miguel</fullName>
            </value>
            <value>
                <fullName>Nik</fullName>
            </value>
            <value>
                <fullName>Zach</fullName>
            </value>
            <value>
                <fullName>Zavier</fullName>
            </value>
            <value>
                <fullName>Alan</fullName>
                <isActive>false</isActive>
                <label>Alan</label>
            </value>
            <value>
                <fullName>Alexis</fullName>
                <isActive>false</isActive>
                <label>Alexis</label>
            </value>
            <value>
                <fullName>Angel</fullName>
                <isActive>false</isActive>
                <label>Angel</label>
            </value>
            <value>
                <fullName>Ashley P.</fullName>
                <isActive>false</isActive>
                <label>Ashley P.</label>
            </value>
            <value>
                <fullName>Blake</fullName>
                <isActive>false</isActive>
                <label>Blake</label>
            </value>
            <value>
                <fullName>Cory</fullName>
                <isActive>false</isActive>
                <label>Cory</label>
            </value>
            <value>
                <fullName>Joseph</fullName>
                <isActive>false</isActive>
                <label>Joseph</label>
            </value>
            <value>
                <fullName>Kenzie</fullName>
                <isActive>false</isActive>
                <label>Kenzie</label>
            </value>
            <value>
                <fullName>LIAM W.</fullName>
                <isActive>false</isActive>
                <label>LIAM W.</label>
            </value>
            <value>
                <fullName>Mckennly</fullName>
                <isActive>false</isActive>
                <label>Mckennly</label>
            </value>
            <value>
                <fullName>Pamela</fullName>
                <isActive>false</isActive>
                <label>Pamela</label>
            </value>
            <value>
                <fullName>Patrick</fullName>
                <isActive>false</isActive>
                <label>Patrick</label>
            </value>
            <value>
                <fullName>chase</fullName>
                <isActive>false</isActive>
                <label>chase</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>