force-app/main/default/objects/QC_Wastage__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUX</fullName>
            </value>
            <value>
                <fullName>QC Bin</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>WH3</fullName>
                <isActive>false</isActive>
                <label>WH3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>