force-app/main/default/objects/QC_Wastage__c/fields/New_Product_ETA__c.field-meta.xml
<CustomField>
    <fullName>New_Product_ETA__c</fullName>
    <label>New Product ETA</label>
    <type>Date</type>
</CustomField>