force-app/main/default/objects/QC_Wastage__c/fields/of_non_shirt_items__c.field-meta.xml
<CustomField>
    <fullName>of_non_shirt_items__c</fullName>
    <label># of non-shirt items</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>