force-app/main/default/objects/QC_Wastage__c/fields/of_shirts__c.field-meta.xml
<CustomField>
    <fullName>of_shirts__c</fullName>
    <label># of shirts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>