force-app/main/default/objects/QC_Wastage__c/fields/Outbound_Inventory_Movement__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Inventory_Movement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outbound Inventory Movement</label>
    <referenceTo>AcctSeedERP__Outbound_Inventory_Movement__c</referenceTo>
    <relationshipLabel>QC Wastage</relationshipLabel>
    <relationshipName>QC_Wastage</relationshipName>
    <type>Lookup</type>
</CustomField>