force-app/main/default/objects/QC_Wastage__c/fields/PA__c.field-meta.xml
<CustomField>
    <fullName>PA__c</fullName>
    <label>PA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colton Graham</fullName>
            </value>
            <value>
                <fullName>John Rucker</fullName>
            </value>
            <value>
                <fullName>Lily Hooper</fullName>
            </value>
            <value>
                <fullName>Stacia Curione</fullName>
            </value>
            <value>
                <fullName>Jeff Kukuk</fullName>
            </value>
            <value>
                <fullName>Jessica Harris</fullName>
            </value>
            <value>
                <fullName>Crystal McVoy</fullName>
            </value>
            <value>
                <fullName>Gianna Carlucci</fullName>
            </value>
            <value>
                <fullName>Melissa Suarez</fullName>
            </value>
            <value>
                <fullName>Lyzzie Ortiz</fullName>
            </value>
            <value>
                <fullName>Zach Barnes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>