force-app/main/default/objects/QC_Wastage__c/fields/Physically_Pulled__c.field-meta.xml
<CustomField>
    <fullName>Physically_Pulled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the item been physically taken from inventory?</description>
    <label>Physically Pulled?</label>
    <type>Checkbox</type>
</CustomField>