force-app/main/default/objects/QC_Wastage__c/fields/Press_Number__c.field-meta.xml
<CustomField>
    <fullName>Press_Number__c</fullName>
    <label>Press Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Press 1</fullName>
            </value>
            <value>
                <fullName>Press 2</fullName>
            </value>
            <value>
                <fullName>Press 3</fullName>
            </value>
            <value>
                <fullName>Press 4</fullName>
            </value>
            <value>
                <fullName>Press 5</fullName>
            </value>
            <value>
                <fullName>Press 6</fullName>
            </value>
            <value>
                <fullName>Press 7</fullName>
            </value>
            <value>
                <fullName>Direct To Film</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>