force-app/main/default/objects/QC_Wastage__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>QC Wastage</relationshipLabel>
    <relationshipName>QC_Wastage</relationshipName>
    <type>Lookup</type>
</CustomField>