force-app/main/default/objects/QC_Wastage__c/fields/Pulled_from_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Pulled_from_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check &quot;True&quot; after QC has been pulled from inventory</description>
    <label>Pulled from Inventory</label>
    <type>Checkbox</type>
</CustomField>