force-app/main/default/objects/QC_Wastage__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
    <relationshipLabel>QC Wastage</relationshipLabel>
    <relationshipName>QC_Wastage</relationshipName>
    <type>Lookup</type>
</CustomField>