force-app/main/default/objects/QC_Wastage__c/fields/Purchase_Order_Line_Look_Up__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Look_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line Look Up</label>
    <referenceTo>AcctSeedERP__Purchase_Order_Line__c</referenceTo>
    <relationshipLabel>QC Wastage</relationshipLabel>
    <relationshipName>QC_Wastage</relationshipName>
    <type>Lookup</type>
</CustomField>