force-app/main/default/objects/QC_Wastage__c/fields/QC_Ticket__c.field-meta.xml
<CustomField>
    <fullName>QC_Ticket__c</fullName>
    <label>QC Ticket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Quantity</fullName>
            </value>
            <value>
                <fullName>Wrong Color</fullName>
            </value>
            <value>
                <fullName>Missing Goods(on packing slip, not in box)</fullName>
            </value>
            <value>
                <fullName>Missing Box(es)</fullName>
            </value>
            <value>
                <fullName>Stains</fullName>
            </value>
            <value>
                <fullName>Holes</fullName>
            </value>
            <value>
                <fullName>Other Manufacturer Defects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>